Added some changes

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,46 @@
-.section-quotes {
+.section__carousel swiper-slide {
+    height: auto;
+    aspect-ratio: 2/3;
+    border-radius: 4px;
+    overflow: hidden;
+}
+
+.section__carousel swiper-slide img {
+    object-fit: cover;
+    object-position: top;
+    height: 100%;
+    width: 100%;
+}
+
+h1 {
+    font-size: 24px;
+    margin-bottom: 8px;
+}
+
+section {
+    margin: 16px auto;
+}
+
+p {
+    margin: 8px auto;
+}
+
+@media screen and (min-width: 1024px){
+    h1 {
+        font-size: 32px;
+    }
+}
+
+body {
+    padding: 16px;
+    color: white;
+    background: #020024;
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 94%);
+}
+
+@media screen and (min-width: 1024px){
+    body {
+        padding: 32px;
+    }
 
 }
